generated/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    SHORT
    CHAR
    DOUBLE
    FLOAT
    INT
    LONG
    VOID
    RETURN
    COMMA
    CARET
    DOT
    EQ_PLUS
    EQ_MINUS
    EQ_TIMES
    EQ_DIV
    STRING
    CHARACTER

Grammar

Rule 0     S' -> programme
Rule 1     programme -> statement
Rule 2     programme -> statement programme
Rule 3     statement -> iteration_statement
Rule 4     statement -> compound_statement
Rule 5     statement -> expression_statement
Rule 6     statement -> selection_statement
Rule 7     expression_statement -> expression SEMICOLON
Rule 8     compound_statement -> LBRACE programme RBRACE
Rule 9     iteration_statement -> WHILE LPAREN expression RPAREN statement
Rule 10    iteration_statement -> FOR LPAREN expression_statement expression_statement expression RPAREN statement
Rule 11    selection_statement -> IF LPAREN expression RPAREN statement
Rule 12    selection_statement -> IF LPAREN expression RPAREN statement ELSE statement
Rule 13    assignation -> ID ASSIGN expression
Rule 14    primary_expression -> ID
Rule 15    primary_expression -> INUMBER
Rule 16    primary_expression -> FNUMBER
Rule 17    primary_expression -> LPAREN expression RPAREN
Rule 18    op_expression -> op_expression PLUS primary_expression
Rule 19    op_expression -> op_expression MINUS primary_expression
Rule 20    op_expression -> op_expression TIMES primary_expression
Rule 21    op_expression -> op_expression DIV primary_expression
Rule 22    op_expression -> op_expression MODULO primary_expression
Rule 23    op_expression -> primary_expression
Rule 24    expression -> logical_expression
Rule 25    relational_expression -> op_expression
Rule 26    relational_expression -> assignation
Rule 27    relational_expression -> relational_expression LESS op_expression
Rule 28    relational_expression -> relational_expression GREATER op_expression
Rule 29    relational_expression -> relational_expression LESS_EQ op_expression
Rule 30    relational_expression -> relational_expression GREATER_EQ op_expression
Rule 31    equality_expression -> relational_expression
Rule 32    equality_expression -> equality_expression EQ relational_expression
Rule 33    equality_expression -> equality_expression NOT_EQ relational_expression
Rule 34    logical_expression -> equality_expression
Rule 35    logical_expression -> logical_expression DOUBLE_AMPERSAND equality_expression
Rule 36    logical_expression -> logical_expression DOUBLE_PIPE equality_expression

Terminals, with rules where they appear

ASSIGN               : 13
CARET                : 
CHAR                 : 
CHARACTER            : 
COMMA                : 
DIV                  : 21
DOT                  : 
DOUBLE               : 
DOUBLE_AMPERSAND     : 35
DOUBLE_PIPE          : 36
ELSE                 : 12
EQ                   : 32
EQ_DIV               : 
EQ_MINUS             : 
EQ_PLUS              : 
EQ_TIMES             : 
FLOAT                : 
FNUMBER              : 16
FOR                  : 10
GREATER              : 28
GREATER_EQ           : 30
ID                   : 13 14
IF                   : 11 12
INT                  : 
INUMBER              : 15
LBRACE               : 8
LESS                 : 27
LESS_EQ              : 29
LONG                 : 
LPAREN               : 9 10 11 12 17
MINUS                : 19
MODULO               : 22
NOT_EQ               : 33
PLUS                 : 18
RBRACE               : 8
RETURN               : 
RPAREN               : 9 10 11 12 17
SEMICOLON            : 7
SHORT                : 
STRING               : 
TIMES                : 20
VOID                 : 
WHILE                : 9
error                : 

Nonterminals, with rules where they appear

assignation          : 26
compound_statement   : 4
equality_expression  : 32 33 34 35 36
expression           : 7 9 10 11 12 13 17
expression_statement : 5 10 10
iteration_statement  : 3
logical_expression   : 24 35 36
op_expression        : 18 19 20 21 22 25 27 28 29 30
primary_expression   : 18 19 20 21 22 23
programme            : 2 8 0
relational_expression : 27 28 29 30 31 32 33
selection_statement  : 6
statement            : 1 2 9 10 11 12 12

Parsing method: LALR

state 0

    (0) S' -> . programme
    (1) programme -> . statement
    (2) programme -> . statement programme
    (3) statement -> . iteration_statement
    (4) statement -> . compound_statement
    (5) statement -> . expression_statement
    (6) statement -> . selection_statement
    (9) iteration_statement -> . WHILE LPAREN expression RPAREN statement
    (10) iteration_statement -> . FOR LPAREN expression_statement expression_statement expression RPAREN statement
    (8) compound_statement -> . LBRACE programme RBRACE
    (7) expression_statement -> . expression SEMICOLON
    (11) selection_statement -> . IF LPAREN expression RPAREN statement
    (12) selection_statement -> . IF LPAREN expression RPAREN statement ELSE statement
    (24) expression -> . logical_expression
    (34) logical_expression -> . equality_expression
    (35) logical_expression -> . logical_expression DOUBLE_AMPERSAND equality_expression
    (36) logical_expression -> . logical_expression DOUBLE_PIPE equality_expression
    (31) equality_expression -> . relational_expression
    (32) equality_expression -> . equality_expression EQ relational_expression
    (33) equality_expression -> . equality_expression NOT_EQ relational_expression
    (25) relational_expression -> . op_expression
    (26) relational_expression -> . assignation
    (27) relational_expression -> . relational_expression LESS op_expression
    (28) relational_expression -> . relational_expression GREATER op_expression
    (29) relational_expression -> . relational_expression LESS_EQ op_expression
    (30) relational_expression -> . relational_expression GREATER_EQ op_expression
    (18) op_expression -> . op_expression PLUS primary_expression
    (19) op_expression -> . op_expression MINUS primary_expression
    (20) op_expression -> . op_expression TIMES primary_expression
    (21) op_expression -> . op_expression DIV primary_expression
    (22) op_expression -> . op_expression MODULO primary_expression
    (23) op_expression -> . primary_expression
    (13) assignation -> . ID ASSIGN expression
    (14) primary_expression -> . ID
    (15) primary_expression -> . INUMBER
    (16) primary_expression -> . FNUMBER
    (17) primary_expression -> . LPAREN expression RPAREN

    WHILE           shift and go to state 7
    FOR             shift and go to state 10
    LBRACE          shift and go to state 11
    IF              shift and go to state 12
    ID              shift and go to state 19
    INUMBER         shift and go to state 20
    FNUMBER         shift and go to state 21
    LPAREN          shift and go to state 8

    programme                      shift and go to state 1
    statement                      shift and go to state 2
    iteration_statement            shift and go to state 3
    compound_statement             shift and go to state 4
    expression_statement           shift and go to state 5
    selection_statement            shift and go to state 6
    expression                     shift and go to state 9
    logical_expression             shift and go to state 13
    equality_expression            shift and go to state 14
    relational_expression          shift and go to state 15
    op_expression                  shift and go to state 16
    assignation                    shift and go to state 17
    primary_expression             shift and go to state 18

state 1

    (0) S' -> programme .



state 2

    (1) programme -> statement .
    (2) programme -> statement . programme
    (1) programme -> . statement
    (2) programme -> . statement programme
    (3) statement -> . iteration_statement
    (4) statement -> . compound_statement
    (5) statement -> . expression_statement
    (6) statement -> . selection_statement
    (9) iteration_statement -> . WHILE LPAREN expression RPAREN statement
    (10) iteration_statement -> . FOR LPAREN expression_statement expression_statement expression RPAREN statement
    (8) compound_statement -> . LBRACE programme RBRACE
    (7) expression_statement -> . expression SEMICOLON
    (11) selection_statement -> . IF LPAREN expression RPAREN statement
    (12) selection_statement -> . IF LPAREN expression RPAREN statement ELSE statement
    (24) expression -> . logical_expression
    (34) logical_expression -> . equality_expression
    (35) logical_expression -> . logical_expression DOUBLE_AMPERSAND equality_expression
    (36) logical_expression -> . logical_expression DOUBLE_PIPE equality_expression
    (31) equality_expression -> . relational_expression
    (32) equality_expression -> . equality_expression EQ relational_expression
    (33) equality_expression -> . equality_expression NOT_EQ relational_expression
    (25) relational_expression -> . op_expression
    (26) relational_expression -> . assignation
    (27) relational_expression -> . relational_expression LESS op_expression
    (28) relational_expression -> . relational_expression GREATER op_expression
    (29) relational_expression -> . relational_expression LESS_EQ op_expression
    (30) relational_expression -> . relational_expression GREATER_EQ op_expression
    (18) op_expression -> . op_expression PLUS primary_expression
    (19) op_expression -> . op_expression MINUS primary_expression
    (20) op_expression -> . op_expression TIMES primary_expression
    (21) op_expression -> . op_expression DIV primary_expression
    (22) op_expression -> . op_expression MODULO primary_expression
    (23) op_expression -> . primary_expression
    (13) assignation -> . ID ASSIGN expression
    (14) primary_expression -> . ID
    (15) primary_expression -> . INUMBER
    (16) primary_expression -> . FNUMBER
    (17) primary_expression -> . LPAREN expression RPAREN

    $end            reduce using rule 1 (programme -> statement .)
    RBRACE          reduce using rule 1 (programme -> statement .)
    WHILE           shift and go to state 7
    FOR             shift and go to state 10
    LBRACE          shift and go to state 11
    IF              shift and go to state 12
    ID              shift and go to state 19
    INUMBER         shift and go to state 20
    FNUMBER         shift and go to state 21
    LPAREN          shift and go to state 8

    statement                      shift and go to state 2
    programme                      shift and go to state 22
    iteration_statement            shift and go to state 3
    compound_statement             shift and go to state 4
    expression_statement           shift and go to state 5
    selection_statement            shift and go to state 6
    expression                     shift and go to state 9
    logical_expression             shift and go to state 13
    equality_expression            shift and go to state 14
    relational_expression          shift and go to state 15
    op_expression                  shift and go to state 16
    assignation                    shift and go to state 17
    primary_expression             shift and go to state 18

state 3

    (3) statement -> iteration_statement .

    WHILE           reduce using rule 3 (statement -> iteration_statement .)
    FOR             reduce using rule 3 (statement -> iteration_statement .)
    LBRACE          reduce using rule 3 (statement -> iteration_statement .)
    IF              reduce using rule 3 (statement -> iteration_statement .)
    ID              reduce using rule 3 (statement -> iteration_statement .)
    INUMBER         reduce using rule 3 (statement -> iteration_statement .)
    FNUMBER         reduce using rule 3 (statement -> iteration_statement .)
    LPAREN          reduce using rule 3 (statement -> iteration_statement .)
    $end            reduce using rule 3 (statement -> iteration_statement .)
    RBRACE          reduce using rule 3 (statement -> iteration_statement .)
    ELSE            reduce using rule 3 (statement -> iteration_statement .)


state 4

    (4) statement -> compound_statement .

    WHILE           reduce using rule 4 (statement -> compound_statement .)
    FOR             reduce using rule 4 (statement -> compound_statement .)
    LBRACE          reduce using rule 4 (statement -> compound_statement .)
    IF              reduce using rule 4 (statement -> compound_statement .)
    ID              reduce using rule 4 (statement -> compound_statement .)
    INUMBER         reduce using rule 4 (statement -> compound_statement .)
    FNUMBER         reduce using rule 4 (statement -> compound_statement .)
    LPAREN          reduce using rule 4 (statement -> compound_statement .)
    $end            reduce using rule 4 (statement -> compound_statement .)
    RBRACE          reduce using rule 4 (statement -> compound_statement .)
    ELSE            reduce using rule 4 (statement -> compound_statement .)


state 5

    (5) statement -> expression_statement .

    WHILE           reduce using rule 5 (statement -> expression_statement .)
    FOR             reduce using rule 5 (statement -> expression_statement .)
    LBRACE          reduce using rule 5 (statement -> expression_statement .)
    IF              reduce using rule 5 (statement -> expression_statement .)
    ID              reduce using rule 5 (statement -> expression_statement .)
    INUMBER         reduce using rule 5 (statement -> expression_statement .)
    FNUMBER         reduce using rule 5 (statement -> expression_statement .)
    LPAREN          reduce using rule 5 (statement -> expression_statement .)
    $end            reduce using rule 5 (statement -> expression_statement .)
    RBRACE          reduce using rule 5 (statement -> expression_statement .)
    ELSE            reduce using rule 5 (statement -> expression_statement .)


state 6

    (6) statement -> selection_statement .

    WHILE           reduce using rule 6 (statement -> selection_statement .)
    FOR             reduce using rule 6 (statement -> selection_statement .)
    LBRACE          reduce using rule 6 (statement -> selection_statement .)
    IF              reduce using rule 6 (statement -> selection_statement .)
    ID              reduce using rule 6 (statement -> selection_statement .)
    INUMBER         reduce using rule 6 (statement -> selection_statement .)
    FNUMBER         reduce using rule 6 (statement -> selection_statement .)
    LPAREN          reduce using rule 6 (statement -> selection_statement .)
    $end            reduce using rule 6 (statement -> selection_statement .)
    RBRACE          reduce using rule 6 (statement -> selection_statement .)
    ELSE            reduce using rule 6 (statement -> selection_statement .)


state 7

    (9) iteration_statement -> WHILE . LPAREN expression RPAREN statement

    LPAREN          shift and go to state 23


state 8

    (17) primary_expression -> LPAREN . expression RPAREN
    (24) expression -> . logical_expression
    (34) logical_expression -> . equality_expression
    (35) logical_expression -> . logical_expression DOUBLE_AMPERSAND equality_expression
    (36) logical_expression -> . logical_expression DOUBLE_PIPE equality_expression
    (31) equality_expression -> . relational_expression
    (32) equality_expression -> . equality_expression EQ relational_expression
    (33) equality_expression -> . equality_expression NOT_EQ relational_expression
    (25) relational_expression -> . op_expression
    (26) relational_expression -> . assignation
    (27) relational_expression -> . relational_expression LESS op_expression
    (28) relational_expression -> . relational_expression GREATER op_expression
    (29) relational_expression -> . relational_expression LESS_EQ op_expression
    (30) relational_expression -> . relational_expression GREATER_EQ op_expression
    (18) op_expression -> . op_expression PLUS primary_expression
    (19) op_expression -> . op_expression MINUS primary_expression
    (20) op_expression -> . op_expression TIMES primary_expression
    (21) op_expression -> . op_expression DIV primary_expression
    (22) op_expression -> . op_expression MODULO primary_expression
    (23) op_expression -> . primary_expression
    (13) assignation -> . ID ASSIGN expression
    (14) primary_expression -> . ID
    (15) primary_expression -> . INUMBER
    (16) primary_expression -> . FNUMBER
    (17) primary_expression -> . LPAREN expression RPAREN

    ID              shift and go to state 19
    INUMBER         shift and go to state 20
    FNUMBER         shift and go to state 21
    LPAREN          shift and go to state 8

    expression                     shift and go to state 24
    logical_expression             shift and go to state 13
    equality_expression            shift and go to state 14
    relational_expression          shift and go to state 15
    op_expression                  shift and go to state 16
    assignation                    shift and go to state 17
    primary_expression             shift and go to state 18

state 9

    (7) expression_statement -> expression . SEMICOLON

    SEMICOLON       shift and go to state 25


state 10

    (10) iteration_statement -> FOR . LPAREN expression_statement expression_statement expression RPAREN statement

    LPAREN          shift and go to state 26


state 11

    (8) compound_statement -> LBRACE . programme RBRACE
    (1) programme -> . statement
    (2) programme -> . statement programme
    (3) statement -> . iteration_statement
    (4) statement -> . compound_statement
    (5) statement -> . expression_statement
    (6) statement -> . selection_statement
    (9) iteration_statement -> . WHILE LPAREN expression RPAREN statement
    (10) iteration_statement -> . FOR LPAREN expression_statement expression_statement expression RPAREN statement
    (8) compound_statement -> . LBRACE programme RBRACE
    (7) expression_statement -> . expression SEMICOLON
    (11) selection_statement -> . IF LPAREN expression RPAREN statement
    (12) selection_statement -> . IF LPAREN expression RPAREN statement ELSE statement
    (24) expression -> . logical_expression
    (34) logical_expression -> . equality_expression
    (35) logical_expression -> . logical_expression DOUBLE_AMPERSAND equality_expression
    (36) logical_expression -> . logical_expression DOUBLE_PIPE equality_expression
    (31) equality_expression -> . relational_expression
    (32) equality_expression -> . equality_expression EQ relational_expression
    (33) equality_expression -> . equality_expression NOT_EQ relational_expression
    (25) relational_expression -> . op_expression
    (26) relational_expression -> . assignation
    (27) relational_expression -> . relational_expression LESS op_expression
    (28) relational_expression -> . relational_expression GREATER op_expression
    (29) relational_expression -> . relational_expression LESS_EQ op_expression
    (30) relational_expression -> . relational_expression GREATER_EQ op_expression
    (18) op_expression -> . op_expression PLUS primary_expression
    (19) op_expression -> . op_expression MINUS primary_expression
    (20) op_expression -> . op_expression TIMES primary_expression
    (21) op_expression -> . op_expression DIV primary_expression
    (22) op_expression -> . op_expression MODULO primary_expression
    (23) op_expression -> . primary_expression
    (13) assignation -> . ID ASSIGN expression
    (14) primary_expression -> . ID
    (15) primary_expression -> . INUMBER
    (16) primary_expression -> . FNUMBER
    (17) primary_expression -> . LPAREN expression RPAREN

    WHILE           shift and go to state 7
    FOR             shift and go to state 10
    LBRACE          shift and go to state 11
    IF              shift and go to state 12
    ID              shift and go to state 19
    INUMBER         shift and go to state 20
    FNUMBER         shift and go to state 21
    LPAREN          shift and go to state 8

    programme                      shift and go to state 27
    statement                      shift and go to state 2
    iteration_statement            shift and go to state 3
    compound_statement             shift and go to state 4
    expression_statement           shift and go to state 5
    selection_statement            shift and go to state 6
    expression                     shift and go to state 9
    logical_expression             shift and go to state 13
    equality_expression            shift and go to state 14
    relational_expression          shift and go to state 15
    op_expression                  shift and go to state 16
    assignation                    shift and go to state 17
    primary_expression             shift and go to state 18

state 12

    (11) selection_statement -> IF . LPAREN expression RPAREN statement
    (12) selection_statement -> IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN          shift and go to state 28


state 13

    (24) expression -> logical_expression .
    (35) logical_expression -> logical_expression . DOUBLE_AMPERSAND equality_expression
    (36) logical_expression -> logical_expression . DOUBLE_PIPE equality_expression

  ! shift/reduce conflict for DOUBLE_AMPERSAND resolved as shift
  ! shift/reduce conflict for DOUBLE_PIPE resolved as shift
    SEMICOLON       reduce using rule 24 (expression -> logical_expression .)
    RPAREN          reduce using rule 24 (expression -> logical_expression .)
    EQ              reduce using rule 24 (expression -> logical_expression .)
    NOT_EQ          reduce using rule 24 (expression -> logical_expression .)
    LESS            reduce using rule 24 (expression -> logical_expression .)
    GREATER         reduce using rule 24 (expression -> logical_expression .)
    LESS_EQ         reduce using rule 24 (expression -> logical_expression .)
    GREATER_EQ      reduce using rule 24 (expression -> logical_expression .)
    DOUBLE_AMPERSAND shift and go to state 29
    DOUBLE_PIPE     shift and go to state 30

  ! DOUBLE_AMPERSAND [ reduce using rule 24 (expression -> logical_expression .) ]
  ! DOUBLE_PIPE     [ reduce using rule 24 (expression -> logical_expression .) ]


state 14

    (34) logical_expression -> equality_expression .
    (32) equality_expression -> equality_expression . EQ relational_expression
    (33) equality_expression -> equality_expression . NOT_EQ relational_expression

  ! shift/reduce conflict for EQ resolved as shift
  ! shift/reduce conflict for NOT_EQ resolved as shift
    DOUBLE_AMPERSAND reduce using rule 34 (logical_expression -> equality_expression .)
    DOUBLE_PIPE     reduce using rule 34 (logical_expression -> equality_expression .)
    SEMICOLON       reduce using rule 34 (logical_expression -> equality_expression .)
    RPAREN          reduce using rule 34 (logical_expression -> equality_expression .)
    LESS            reduce using rule 34 (logical_expression -> equality_expression .)
    GREATER         reduce using rule 34 (logical_expression -> equality_expression .)
    LESS_EQ         reduce using rule 34 (logical_expression -> equality_expression .)
    GREATER_EQ      reduce using rule 34 (logical_expression -> equality_expression .)
    EQ              shift and go to state 31
    NOT_EQ          shift and go to state 32

  ! EQ              [ reduce using rule 34 (logical_expression -> equality_expression .) ]
  ! NOT_EQ          [ reduce using rule 34 (logical_expression -> equality_expression .) ]


state 15

    (31) equality_expression -> relational_expression .
    (27) relational_expression -> relational_expression . LESS op_expression
    (28) relational_expression -> relational_expression . GREATER op_expression
    (29) relational_expression -> relational_expression . LESS_EQ op_expression
    (30) relational_expression -> relational_expression . GREATER_EQ op_expression

  ! shift/reduce conflict for LESS resolved as shift
  ! shift/reduce conflict for GREATER resolved as shift
  ! shift/reduce conflict for LESS_EQ resolved as shift
  ! shift/reduce conflict for GREATER_EQ resolved as shift
    EQ              reduce using rule 31 (equality_expression -> relational_expression .)
    NOT_EQ          reduce using rule 31 (equality_expression -> relational_expression .)
    DOUBLE_AMPERSAND reduce using rule 31 (equality_expression -> relational_expression .)
    DOUBLE_PIPE     reduce using rule 31 (equality_expression -> relational_expression .)
    SEMICOLON       reduce using rule 31 (equality_expression -> relational_expression .)
    RPAREN          reduce using rule 31 (equality_expression -> relational_expression .)
    LESS            shift and go to state 33
    GREATER         shift and go to state 34
    LESS_EQ         shift and go to state 35
    GREATER_EQ      shift and go to state 36

  ! LESS            [ reduce using rule 31 (equality_expression -> relational_expression .) ]
  ! GREATER         [ reduce using rule 31 (equality_expression -> relational_expression .) ]
  ! LESS_EQ         [ reduce using rule 31 (equality_expression -> relational_expression .) ]
  ! GREATER_EQ      [ reduce using rule 31 (equality_expression -> relational_expression .) ]


state 16

    (25) relational_expression -> op_expression .
    (18) op_expression -> op_expression . PLUS primary_expression
    (19) op_expression -> op_expression . MINUS primary_expression
    (20) op_expression -> op_expression . TIMES primary_expression
    (21) op_expression -> op_expression . DIV primary_expression
    (22) op_expression -> op_expression . MODULO primary_expression

    LESS            reduce using rule 25 (relational_expression -> op_expression .)
    GREATER         reduce using rule 25 (relational_expression -> op_expression .)
    LESS_EQ         reduce using rule 25 (relational_expression -> op_expression .)
    GREATER_EQ      reduce using rule 25 (relational_expression -> op_expression .)
    EQ              reduce using rule 25 (relational_expression -> op_expression .)
    NOT_EQ          reduce using rule 25 (relational_expression -> op_expression .)
    DOUBLE_AMPERSAND reduce using rule 25 (relational_expression -> op_expression .)
    DOUBLE_PIPE     reduce using rule 25 (relational_expression -> op_expression .)
    SEMICOLON       reduce using rule 25 (relational_expression -> op_expression .)
    RPAREN          reduce using rule 25 (relational_expression -> op_expression .)
    PLUS            shift and go to state 37
    MINUS           shift and go to state 38
    TIMES           shift and go to state 39
    DIV             shift and go to state 40
    MODULO          shift and go to state 41


state 17

    (26) relational_expression -> assignation .

    LESS            reduce using rule 26 (relational_expression -> assignation .)
    GREATER         reduce using rule 26 (relational_expression -> assignation .)
    LESS_EQ         reduce using rule 26 (relational_expression -> assignation .)
    GREATER_EQ      reduce using rule 26 (relational_expression -> assignation .)
    EQ              reduce using rule 26 (relational_expression -> assignation .)
    NOT_EQ          reduce using rule 26 (relational_expression -> assignation .)
    DOUBLE_AMPERSAND reduce using rule 26 (relational_expression -> assignation .)
    DOUBLE_PIPE     reduce using rule 26 (relational_expression -> assignation .)
    SEMICOLON       reduce using rule 26 (relational_expression -> assignation .)
    RPAREN          reduce using rule 26 (relational_expression -> assignation .)


state 18

    (23) op_expression -> primary_expression .

    PLUS            reduce using rule 23 (op_expression -> primary_expression .)
    MINUS           reduce using rule 23 (op_expression -> primary_expression .)
    TIMES           reduce using rule 23 (op_expression -> primary_expression .)
    DIV             reduce using rule 23 (op_expression -> primary_expression .)
    MODULO          reduce using rule 23 (op_expression -> primary_expression .)
    LESS            reduce using rule 23 (op_expression -> primary_expression .)
    GREATER         reduce using rule 23 (op_expression -> primary_expression .)
    LESS_EQ         reduce using rule 23 (op_expression -> primary_expression .)
    GREATER_EQ      reduce using rule 23 (op_expression -> primary_expression .)
    EQ              reduce using rule 23 (op_expression -> primary_expression .)
    NOT_EQ          reduce using rule 23 (op_expression -> primary_expression .)
    DOUBLE_AMPERSAND reduce using rule 23 (op_expression -> primary_expression .)
    DOUBLE_PIPE     reduce using rule 23 (op_expression -> primary_expression .)
    SEMICOLON       reduce using rule 23 (op_expression -> primary_expression .)
    RPAREN          reduce using rule 23 (op_expression -> primary_expression .)


state 19

    (13) assignation -> ID . ASSIGN expression
    (14) primary_expression -> ID .

    ASSIGN          shift and go to state 42
    PLUS            reduce using rule 14 (primary_expression -> ID .)
    MINUS           reduce using rule 14 (primary_expression -> ID .)
    TIMES           reduce using rule 14 (primary_expression -> ID .)
    DIV             reduce using rule 14 (primary_expression -> ID .)
    MODULO          reduce using rule 14 (primary_expression -> ID .)
    LESS            reduce using rule 14 (primary_expression -> ID .)
    GREATER         reduce using rule 14 (primary_expression -> ID .)
    LESS_EQ         reduce using rule 14 (primary_expression -> ID .)
    GREATER_EQ      reduce using rule 14 (primary_expression -> ID .)
    EQ              reduce using rule 14 (primary_expression -> ID .)
    NOT_EQ          reduce using rule 14 (primary_expression -> ID .)
    DOUBLE_AMPERSAND reduce using rule 14 (primary_expression -> ID .)
    DOUBLE_PIPE     reduce using rule 14 (primary_expression -> ID .)
    SEMICOLON       reduce using rule 14 (primary_expression -> ID .)
    RPAREN          reduce using rule 14 (primary_expression -> ID .)


state 20

    (15) primary_expression -> INUMBER .
